# daft

./: .gitignore  LICENSE  ReadMe.md  cabal.config  daft-mongodb.cabal  daft-mongodb.config  daft-postgresql.cabal  daft-postgresql.config  daft.cabal  daft.config  nixpkgs.json  raft.nix  release.nix  shell.nix  singletons.nix  stack.yaml  type-list.nix  vinyl.nix
daft/: daft.cabal  daft.config  default.nix  release.nix  shell.nix
daft-mongodb/: bson-generic.nix  daft-mongodb.cabal  daft-mongodb.config  default.nix  release.nix  shell.nix
daft-mongodb/src/: Test.hs
daft-mongodb/src/Data/Daft/Vinyl/FieldCube/: MongoDB.hs
daft-mongodb/src/Data/Daft/Vinyl/FieldRec/: Bson.hs  MongoDB.hs
daft-postgresql/: daft-postgresql.cabal  daft-postgresql.config  default.nix  release.nix  shell.nix
daft-postgresql/src/: Test.hs
daft-postgresql/src/Data/Daft/Vinyl/FieldRec/: Hasql.hs
daft/small-examples/: Main1.hs  Main2.hs
daft/src/Data/Daft/: Cache.hs  DataCube.hs  Lookup.hs  TypeLevel.hs
daft/src/Data/Daft/DataCube/: Function.hs  Util.hs
daft/src/Data/Daft/Vinyl/FieldRec/: Aeson.hs  IO.hs  Instances.hs
daft/src/Data/Daft/Vinyl/TypeLevel/: Test.hs
small-examples/: Main3.hs  Main4.hs
src/: Main.hs  Test.hs
src/Control/Monad/Except/: Util.hs
src/Data/Daft/: Cache.hs  DataCube.hs  Keyed.hs  Lookup.hs  MapReduce.hs  Source.hs  String.hs  TypeLevel.hs
src/Data/Daft/Cache/: Memory.hs
src/Data/Daft/DataCube/: Existential.hs  Function.hs  Join.hs  Sum.hs  Table.hs
src/Data/Daft/MapReduce/: Internal.hs  Parallel.hs
src/Data/Daft/Vinyl/: Core.hs  Derived.hs  FieldCube.hs  FieldRec.hs  FunctionRec.hs  Join.hs  Rec.hs  TypeLevel.hs
src/Data/Daft/Vinyl/Derived/: ReadWrite.hs
src/Data/Daft/Vinyl/FieldCube/: Aeson.hs  Bson.hs  Example.hs  Hasql.hs  IO.hs  MongoDB.hs
src/Data/Daft/Vinyl/FieldRec/: Hasql.hs  IO.hs  Instances.hs  MongoDB.hs  NFData.hs
src/Data/Daft/Vinyl/FunctionRec/: Example.hs
src/Data/Daft/Vinyl/TypeLevel/: Test.hs
src/Data/List/: Util.hs
src/Data/String/: Util.hs
