name:                daft-mongodb
version:             0.4.16.0
license:             AllRightsReserved
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs  : src
  exposed-modules : Data.Daft.Vinyl.FieldRec.MongoDB
  build-depends   : base >= 4 && < 5
                  , bson
                  , bson-generic
                  , daft
                  , monad-control
                  , mongoDB
                  , mtl
                  , vinyl
  exposed         : True
  buildable       : True
  default-language: Haskell2010
  ghc-options     : -O2 -Wall
