name:                daft
version:             0.4.10.0
license:             AllRightsReserved
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs  : src
  exposed-modules : Data.Daft.DataCube
                    Data.Daft.Keyed
                    Data.Daft.Lookup
                    Data.Daft.Source
                    Data.Daft.TypeLevel
                    Data.Daft.Vinyl.FieldCube
                    Data.Daft.Vinyl.FieldCube.Example
                    Data.Daft.Vinyl.FieldRec
                    Data.Daft.Vinyl.Join
                    Data.Daft.Vinyl.Rec
                    Data.Daft.Vinyl.TypeLevel
                    Data.Daft.Vinyl.TypeLevel.Test
  build-depends   : base >= 4 && < 5
                  , aeson
                  , containers
                  , data-default
                  , lens
                  , mtl
                  -- The "raft" package is available at <https://bitbucket.org/functionally/raft>.
                  , raft
                  , split
                  , tostring
                  , type-list
                  , vinyl
  exposed         : True
  buildable       : True
  default-language: Haskell2010
  ghc-options     : -O2 -Wall
